Bug 1231622. Allow drawing CSS images that don't have a complete frame. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D129893