layout/painting/nsCSSRendering.cpp
@@ -2973,6 +2973,10 @@ nsBackgroundLayerState nsCSSRendering::PrepareImageLayer(
   if (aFlags & nsCSSRendering::PAINTBG_HIGH_QUALITY_SCALING) {
     irFlags |= nsImageRenderer::FLAG_HIGH_QUALITY_SCALING;
   }
+  if (StaticPrefs::layout_display_partial_background_images() &&
+      !aPresContext->IsChrome()) {
+    irFlags |= nsImageRenderer::FLAG_DRAW_PARTIAL_FRAMES;
+  }
 
   nsBackgroundLayerState state(aForFrame, &aLayer.mImage, irFlags);
   if (!state.mImageRenderer.PrepareImage()) {
